style.css
:root {
    --maxHeightGif: calc(100vh - 300px);
    --maxWidthGif: calc(100vw - 40px)
}

* {
    box-sizing: border-box;
    font-family: 'Open Sans', sans-serif;
    color: #37567D;
}

body {
    margin: 0;
    padding: 1px;
    width: 100%;
    height: 100vh;
    text-align: center;
    background: rgba(214,129,219,1);
    background: -moz-linear-gradient(-45deg, rgba(214,129,219,1) 0%, rgba(166,129,219,1) 33%, rgba(73,165,191,1) 66%, rgba(166,223,219,1) 100%);
    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(214,129,219,1)), color-stop(33%, rgba(166,129,219,1)), color-stop(66%, rgba(73,165,191,1)), color-stop(100%, rgba(166,223,219,1)));
    background: -webkit-linear-gradient(-45deg, rgba(214,129,219,1) 0%, rgba(166,129,219,1) 33%, rgba(73,165,191,1) 66%, rgba(166,223,219,1) 100%);
    background: -o-linear-gradient(-45deg, rgba(214,129,219,1) 0%, rgba(166,129,219,1) 33%, rgba(73,165,191,1) 66%, rgba(166,223,219,1) 100%);
    background: -ms-linear-gradient(-45deg, rgba(214,129,219,1) 0%, rgba(166,129,219,1) 33%, rgba(73,165,191,1) 66%, rgba(166,223,219,1) 100%);
    background: linear-gradient(135deg, rgba(214,129,219,1) 0%, rgba(166,129,219,1) 33%, rgba(73,165,191,1) 66%, rgba(166,223,219,1) 100%);
}

h1 {
    font-size: 40px;
}

#content-container {
    display: grid;
    grid-template: var(--maxHeightGif) auto / auto;
    justify-items: center;
}

#gif-container {
    position: relative;
}

img {
    display: block;
    margin: 0 auto;
}

#gif {
    max-height: var(--maxHeightGif);
    max-width: var(--maxWidthGif);
    height: 100%;
    width: 100%;
    object-fit: contain;
    font-size: 20px;
    color: #E6C17C;
}

#error-message {
    position: absolute;
    top: -27px;
    right: 0;
    left: 0;
    font-size: 18px;
    color: #db5939;
    background-color: rgba(69, 59, 165, 0.6);

}

button, input {
    margin-top: 20px;
    padding: 8px 12px;
    border: none;
    font-size: 20px;
    background-color: rgb(230, 193, 124);
}

#query {
    width: 350px;
}

footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

